# tiangongkaiwu-hermes-kanban-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: tiangongkaiwu.yaml
docs/: minimal-closed-loop.md  runtime-e2e-acceptance.md  security-and-upgrade-boundary.md
fixtures/: github_issue_100.json  kanban_runs_task_100.json  kanban_runs_task_102_running.json  kanban_show_task_100.json  kanban_show_task_102_running.json  kanban_task_example_100.json  task_events_example_100.json
scripts/: github-issue-to-kanban  kanban-promote-watch  kanban-task-status  kanban-to-github-comment
src/tgkw_kanban_bridge/: __init__.py  bridge.py  cli.py  github_comment_cli.py  promote_watch_cli.py  runtime.py  status_cli.py
tests/: test_github_issue_to_kanban.py  test_runtime_status_and_github_comment.py  test_script_wrappers.py
